gobmkida/c2/do_find_break_chain2_efficient_moves
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_break_chain2_efficient_moves/src/engine/reading.c:4347:11: error: use of undeclared identifier 'xmmword_493C10'
( __m128i)xmmword_493C10))) ) 
          ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_break_chain2_efficient_moves/src/engine/reading.c:4354:66: error: use of undeclared identifier 'byte_9B388C'
if ( ( v15 = v14 - 20, v16 = v13 + 20LL, v8 == ( unsigned __int8)byte_9B388C[v14]) 
                                                                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_break_chain2_efficient_moves/src/obj/1/reading.o] Error 1
